[workspace]
members = [
    "crates/bastion-core",
    "crates/bastion-config",
    "crates/bastion-cache",
    "crates/bastion-metrics",
    "crates/bastion-admin",
    "crates/bastion-telegram",
    "crates/bastion-dashboard",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Niainarisoa"]
license = "MIT"
repository = "https://github.com/Niainarisoa01/Bastion"
description = "High-Performance API Gateway written in Rust"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
axum = { version = "0.7", features = ["ws", "json"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Concurrency
dashmap = "6"
crossbeam = "0.8"
arc-swap = "1"

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Metrics
prometheus-client = "0.22"
hdrhistogram = "7"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Config watch
notify = "6"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
smallvec = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
jsonwebtoken = "9"
bytes = "1"
pin-project-lite = "0.2"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# Workspace crates
bastion-core = { path = "crates/bastion-core" }
bastion-config = { path = "crates/bastion-config" }
bastion-cache = { path = "crates/bastion-cache" }
bastion-metrics = { path = "crates/bastion-metrics" }
bastion-admin = { path = "crates/bastion-admin" }
bastion-telegram = { path = "crates/bastion-telegram" }
bastion-dashboard = { path = "crates/bastion-dashboard" }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[package]
name = "bastion"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }

[dependencies]
bastion-core = { workspace = true }
bastion-config = { workspace = true }
bastion-cache = { workspace = true }
bastion-metrics = { workspace = true }
bastion-admin = { workspace = true }
bastion-telegram = { workspace = true }
bastion-dashboard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
