[package]
name = "bastion-admin"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Admin REST API for Bastion Gateway"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bastion-config = { workspace = true }
bastion-metrics = { workspace = true }
