[package]
name = "bastion-cache"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Lock-free LRU cache for Bastion Gateway"

[dependencies]
dashmap = { workspace = true }
crossbeam = { workspace = true }
hyper = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cache_bench"
harness = false
