[package]
name = "bastion-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management for Bastion Gateway"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
