[package]
name = "bastion-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Core proxy engine for Bastion Gateway"

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "http2", "server-auto", "tokio"] }
http-body-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
smallvec = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bastion-cache = { workspace = true }
bastion-metrics = { workspace = true }
bastion-config = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ipnet = { workspace = true }
rand = { workspace = true }
xxhash-rust = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
