[package]
name = "bastion-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Real-time web dashboard for Bastion Gateway"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bastion-metrics = { workspace = true }
bastion-config = { workspace = true }
