[package]
name = "bastion-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Metrics collection for Bastion Gateway"

[dependencies]
prometheus-client = { workspace = true }
hdrhistogram = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
