[package]
name = "bastion-metrics"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Metrics collection for Bastion Gateway"

[dependencies]
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hdrhistogram = { workspace = true }
parking_lot = "0.12"
prometheus-client = { workspace = true }
